[gd_scene load_steps=3 format=3 uid="uid://cdoca082v2md"]

[ext_resource type="Script" uid="uid://m037lnj71nn" path="res://scenes/upgrade_manager.gd" id="1_qp65j"]
[ext_resource type="FontFile" uid="uid://u6txac7vm6rd" path="res://assets/fonts/Probly8.ttf" id="2_n8u1n"]

[node name="LevelUpUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_qp65j")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.67451)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -13.5
offset_right = 17.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n8u1n")
theme_override_font_sizes/font_size = 41
text = "Level Up!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="Option1" type="VBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/Option1"]
layout_mode = 2
text = "Faster Train"

[node name="Option2" type="VBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/Option2"]
layout_mode = 2
text = "Faster Train"

[node name="Option3" type="VBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/Option3"]
layout_mode = 2
text = "Faster Train"
